...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <Button
                    android:id="@+id/bookappointment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/btnstyle2"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
...
