...
                android:textStyle="italic"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_month"
                android:gravity="center"
                android:text="Welcome," />

            <TextView
                android:id="@+id/dashname"
                style="@style/whitetext20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
