<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                app:civ_border_color="#FF000000"
                app:civ_border_width="5dp" />

            <ImageView
                android:id="@+id/addimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignStart="@+id/profile_image"
                android:layout_alignTop="@+id/profile_image"
                android:layout_alignEnd="@+id/profile_image"
                android:layout_alignBottom="@+id/profile_image"
                android:layout_marginStart="32dp"
                android:layout_marginTop="66dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="-7dp"
                android:background="@drawable/ic_add_circle_black_24dp"
                android:backgroundTint="@color/colorPrimary" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/userpicture"
                    android:drawableLeft="@drawable/userpicture"
                    android:drawablePadding="10dp"
                    android:hint="Name"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/address"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/address"
                    android:drawableLeft="@drawable/address"
                    android:drawablePadding="10dp"
                    android:hint="Address"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dob"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/calendar"
                    android:drawableLeft="@drawable/calendar"
                    android:drawablePadding="10dp"
                    android:hint="Date of Birth"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bloodgroup"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/bloodgroup"
                    android:drawableLeft="@drawable/bloodgroup"
                    android:drawablePadding="10dp"
                    android:hint="Blood Group"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/weight"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/weight"
                    android:drawableLeft="@drawable/weight"
                    android:drawablePadding="10dp"
                    android:hint="Weight"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/height"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/height"
                    android:drawableLeft="@drawable/height"
                    android:drawablePadding="10dp"
                    android:hint="Height"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone"
                    style="@style/bluetext20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/phone"
                    android:drawableLeft="@drawable/phone"
                    android:drawablePadding="10dp"
                    android:hint="Phone Number"
                    android:padding="15dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:background="@drawable/btnstyle1"
                android:text="Save"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>