...

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <Button
            android:id="@+id/editprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btnstyle1"
            android:padding="10dp"
...
